fixed padding so better alignment & made class names easier to read

--- a/css/shared.css
+++ b/css/shared.css
@@ -11,75 +11,51 @@ main {
     flex-grow: 1;
     flex-basis: 0;
 }
+
 header, h1, h2, h3, h4 {
     margin: 0;
-    /* border: 5px red solid; */
 }
 
-/* a{
-    border: 5px solid red;
-} */
-/* h1  {
-    padding: 5px;
-    margin: 10px;
-    border: 5px red solid;
-} */
-
-header, h1, h2, h3, h4{
+header, h1, h2, h3, h4 {
     font-family: Arial, sans-serif;
-    /* font-family: 'Montserrat', sans-serif; */
 }
 
-/* #website-name{
-    margin-left: 10px;
-    padding-left: 5px;
-} */
-h1 {
-    /* border: 5px solid red; */
-}
-p, a, label, textarea, button, .label, .slide-img-caption,li {
+p, a, label, textarea, button, .label, .slide-img-caption, li {
     font-family: Georgia;
 }
 
-.navlinks, #drop-down-items {
+.nav-links, #drop-down-items {
     list-style-type: none;
     padding: 5px;
     margin: 0;
 }
 
-.navlinks {
+.nav-links {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     background-color: black;
     font-size: 1.5em;
-    /* margin-left: 10px; */
-    /* padding-left: 15px; */
-    
-
 }
 
-.navlink {
+.nav-link {
     position: relative;
-    
-    
 }
 
-.navlink>a, .label, #drop-down-items>li>a {
+.nav-link>a, .label, #drop-down-items>li>a {
     display: block;
-    /* margin: 10px; */
     padding: 10px;
     text-decoration: none;
     color: white;
     cursor: pointer;
 }
 
-.navlink>a:hover, .label:hover, #drop-down-items>li>a:hover {
+.nav-link>a:hover, .label:hover, #drop-down-items>li>a:hover {
     display: block;
     background-color: rgb(80, 80, 80);
 }
 
-.navlink>a:active, .label:active {
+.nav-link>a:active, .label:active {
     display: block;
     background-color: lightblue;
 }
@@ -107,7 +83,6 @@ p, a, label, textarea, button, .label, .slide-img-caption,li {
     flex-basis: 0;
     margin: 10px;
     padding: 5px;
-
 }
 
 .card {
@@ -126,7 +101,7 @@ footer {
     header {
         background-color: black;
         color: white;
-        /* margin: -8px;   */
+        
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -138,10 +113,8 @@ footer {
         z-index: 1;
         /* added */
         flex-wrap: wrap;
-
     }
     h1 {
-        /* padding: 8px; */
         padding: 5px;
     }
     #menu-button {
@@ -159,10 +132,10 @@ footer {
         top: 100%;
         right: 0;
     }
-    .navlinks {
+    .nav-links {
         flex-direction: column;
     }
-    .navlink>a, .navlink>.label, #drop-down-items>li>a {
+    .nav-link>a, .nav-link>.label, #drop-down-items>li>a {
         border-top: 1px solid white;
     }
     #drop-down-items {
